# TorneoMundial

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  configuration.json  main.cpp  vcpkg.json
cmake-build/: CMakeCache.txt
database/: db_script.sql  tables.sql
gh_2.63.2_linux_amd64/share/man/man1/: gh-alias-delete.1  gh-alias-import.1  gh-alias-list.1  gh-alias-set.1  gh-alias.1  gh-api.1  gh-attestation-download.1  gh-attestation-trusted-root.1  gh-attestation-verify.1  gh-attestation.1  gh-auth-login.1  gh-auth-logout.1  gh-auth-refresh.1  gh-auth-setup-git.1  gh-auth-status.1  gh-auth-switch.1  gh-auth-token.1  gh-auth.1  gh-browse.1  gh-cache-delete.1  gh-cache-list.1  gh-cache.1  gh-codespace-code.1  gh-codespace-cp.1  gh-codespace-create.1  gh-codespace-delete.1  gh-codespace-edit.1  gh-codespace-jupyter.1  gh-codespace-list.1  gh-codespace-logs.1  gh-codespace-ports-forward.1  gh-codespace-ports-visibility.1  gh-codespace-ports.1  gh-codespace-rebuild.1  gh-codespace-ssh.1  gh-codespace-stop.1  gh-codespace-view.1  gh-codespace.1  gh-completion.1  gh-config-clear-cache.1  (+158 more)
include/configuration/: ApplicationProperties.hpp  ContainerSetup.hpp  DatabaseConfiguration.hpp  RouteDefinition.hpp  RunConfiguration.hpp
include/controller/: TeamController.hpp  TestController.hpp  TournamentController.hpp
include/delegate/: ITeamDelegate.hpp  ITournamentDelegate.hpp  TeamDelegate.hpp  TournamentDelegate.hpp
include/domain/: Group.hpp  IMatchStrategy.hpp  Match.hpp  Tournament.hpp  Utilities.hpp
include/persistence/configuration/: IDbConnectionProvider.hpp  PostgresConfig.hpp  PostgresConnection.hpp  PostgresConnectionProvider.hpp
include/persistence/repository/: IRepository.hpp  TeamRepository.hpp  TournamentRepository.hpp
include/utilities/: Utilities.hpp
load_test/: locustfile.py  world_cup_tournament_id.txt
src/controller/: TournamentController.cpp
src/delegate/: TeamDelegate.cpp  TournamentDelegate.cpp
src/persistence/repository/: TeamRepository.cpp  TournamentRepository.cpp
tests/: CMakeLists.txt  TeamControllerTest.cpp
tests/controller/: TeamControllerTest.cpp
tournament_common/: CMakeLists.txt
tournament_common/include/cms/: ConnectionManager.hpp  QueueMessageConsumer.hpp
tournament_common/include/configuration/: IResolver.hpp
tournament_common/include/domain/: Group.hpp  IMatchStrategy.hpp  Match.hpp  Team.hpp  Tournament.hpp  Utilities.hpp  WorldCupStrategy.hpp
tournament_common/include/persistence/configuration/: IDbConnectionProvider.hpp  PostgresConnection.hpp  PostgresConnectionProvider.hpp
tournament_common/include/persistence/model/: Team.hpp
tournament_common/include/persistence/repository/: GroupRepository.hpp  IGroupRepository.hpp  IMatchRepository.hpp  MatchRepository.hpp  TeamRepository.hpp  TournamentRepository.hpp
tournament_common/src/persistence/repository/: GroupRepository.cpp  MatchRepository.cpp  TournamentRepository.cpp
tournament_consumer/: CMakeLists.txt  Containerfile  configuration.json  main.cpp
tournament_consumer/include/amqp/: MessagingProducer.hpp
tournament_consumer/include/cms/: GroupAddTeamListener.hpp  MatchCreationListener.hpp  MessageConsumer.hpp  QueueMessageListener.hpp  ScoreUpdateListener.hpp
tournament_consumer/include/configuration/: ContainerSetup.hpp
tournament_consumer/include/delegate/: IDelegate.hpp  MatchConsumerDelegate.hpp  MatchDelegate.hpp
tournament_consumer/include/event/: ScoreUpdateEvent.hpp  TeamAddEvent.hpp
tournament_consumer/src/amqp/: MessagingProducer.cpp
tournament_services/: CMakeLists.txt  Containerfile  configuration.json  haproxy.cfg  main.cpp
tournament_services/include/: MessagePublisher.hpp
tournament_services/include/amqp/: MessagingProducer.hpp
tournament_services/include/cms/: Connection.hpp  ConnectionManager.hpp  IMessageProducer.hpp  IQueueMessageProducer.hpp  MessageProducer.hpp  QueueMessageProducer.hpp  QueueResolver.hpp
tournament_services/include/configuration/: ContainerSetup.hpp  RouteDefinition.hpp
tournament_services/include/controller/: GroupController.hpp  MatchController.hpp  TeamController.hpp  TournamentController.hpp
tournament_services/include/delegate/: GroupDelegate.hpp  IGroupDelegate.hpp  IMatchDelegate.hpp  ITeamDelegate.hpp  ITournamentDelegate.hpp  MatchDelegate.hpp  TeamDelegate.hpp  TournamentDelegate.hpp
tournament_services/src/amqp/: MessagingProducer.cpp
tournament_services/src/controller/: GroupController.cpp  MatchController.cpp  TeamController.cpp  TournamentController.cpp
tournament_services/src/delegate/: GroupDelegate.cpp  MatchDelegate.cpp  TeamDelegate.cpp  TournamentDelegate.cpp
tournament_services/tests/: CMakeLists.txt
tournament_services/tests/controller/: GroupControllerTest.cpp  MatchControllerTest.cpp  TeamControllerTest.cpp  TournamentControllerTest.cpp
tournament_services/tests/delegate/: GroupDelegateTest.cpp  MatchDelegateConsumerTest.cpp  MatchDelegateTest.cpp  TeamDelegateTest.cpp  TournamentDelegateTest.cpp
tournament_services/tests/domain/: WorldCupStrategyTest.cpp
tournament_services/tests/listener/: GroupAddTeamListenerTest.cpp  MatchCreationListenerTest.cpp  QueueMessageListenerTest.cpp  ScoreUpdateListenerTest.cpp
tournament_services/tests/mocks/: ConnectionManagerMock.hpp  GroupDelegateMock.hpp  GroupRepositoryMock.hpp  MatchDelegateMock.hpp  MatchRepositoryMock.hpp  QueueMessageProducerMock.hpp  TeamDelegateMock.hpp  TeamRepositoryMock.h  TournamentDelegateMock.hpp  TournamentRepositoryMock.h
